crates/schemas/tests/compile-fail/internal_module_import.stderr
error[E0432]: unresolved import `racing_wheel_schemas::ipc_conversion_tests`
 --> tests/compile-fail/internal_module_import.rs:4:5
  |
4 | use racing_wheel_schemas::ipc_conversion_tests;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ipc_conversion_tests` in the root
  |
note: found an item that was configured out
 --> src/lib.rs
  |
  | #[cfg(test)]
  |       ---- the item is gated here
  | mod ipc_conversion_tests;
  |     ^^^^^^^^^^^^^^^^^^^^
help: a similar name exists in the module
  |
4 - use racing_wheel_schemas::ipc_conversion_tests;
4 + use racing_wheel_schemas::ipc_conversion;
  |
